<resources>
    <string name="app_name">TagAlong</string>
    <string name="facebook_app_id">315288105697872</string>
    <string name="fb_login_protocol_scheme">fb315288105697872</string>
    <string name="twitter_consumer_key" translatable="false">HXXPqJEDByYUZFx9Clz4d8mfG</string>
    <string name="twitter_consumer_secret" translatable="false">lFKVe1m5AX4uSUdnrZzOEoazciU5Gl3YQNkrj3y0RwcQtIFDbY</string>
    <string name="verification_text">We have sent a verification code to your mobile number</string>
    <string name="what_re_you_upto">What are you upto?</string>
    <string name="i_am_driving">Driver</string>
    <string name="i_am_searching">Rider</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="home">Home</string>
    <string name="timeline">Timeline</string>
    <string name="current_ride">Current Ride</string>
    <string name="recent_rides">Recent Rides</string>
    <string name="profile">Profile</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="about_us">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="when_do_you_want_to_leave">When do you need a ride?</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout?</string>
    <string name="document_not_found">Documents not found!</string>
    <string name="document_not_found_text">Upload documents to start your ride. For security reasons you need to upload your documents.</string>
    <string name="upload">Upload</string>
    <string name="add_new_ride">Start or Join a New Ride</string>
    <string name="add_ride_dtl">No Current Rides. Click START RIDE to start a ride or join an existing ride</string>
    <string name="title_activity_current_ride_demo">CurrentRideActivityDemo</string>
    <string name="change_ride_needs">Your Ride Details</string>
    <string name="estimated_cost_of_the_ride">Estimated cost of the ride</string>
    <string name="mode_of_payment">Mode of payment</string>
    <!--<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBiAvCToSLEv3LMfW6gFI0PTvHM4s8nq18</string>-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyChV_kPPwQkFZ_beep4K4y6DEHz9dUKYg4</string>
    <string name="your_ride">Your Ride</string>
    <string name="drop_message">DROP A MESSAGE</string>
    <string name="ride_reqsted_driver_confirm">Ride has been requested, waiting for driver to confirm</string>
    <string name="carrying_bags">Luggage/bag(s)</string>
    <string name="travelling_with_kids">Travelling with kids</string>
    <string name="rider_with_kids">Families with children?</string>
    <string name="you_smoke">Smoking?</string>
    <string name="rider_can_carry_bags">Riders with bags?</string>
    <string name="seats_on_board">Seats on board</string>
    <string name="confirm">Confirm</string>
    <string name="your_driving_preferences">Your driving preferences</string>
    <string name="only_accepting_credit_card">We are only accepting credit card payments</string>
    <string name="activity_title_main">Filters</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="cancel_ride">Are you sure you want to cancel this ride?</string>
    <string name="cancel_reason">There must be a reason, share with us.</string>
    <string name="start_ride">You can start ride on schedule</string>
    <string name="order_key">ORDER</string>
    <string name="please_wait">Please Wait</string>
    <string name="cancel_pickup">Are you sure you want to cancel this pickup?</string>
    <string name="action_OK">DONE</string>
    <string name="navigate">Navigate</string>
    <string name="currentupcoming"><![CDATA[Current & Upcoming rides]]></string>
    <string name="current_nd_upcoming"><![CDATA[Current & upcoming rides]]></string>
    <string name="i_am">I am a</string>
    <string name="emergency_send">SOS sent!! Please hold on for sometime!!</string>
    <string name="emergency_rides">Rides in Emergency</string>
    <string name="sos_received">SOS received</string>
    <string name="no_emergencies">No Emergencies</string>
    <string name="emergency_string">If any users presses sos button we will show his/her details here you can help him/her voluntarily.</string>
    <string name="invite_contacts">Loading Contacts</string>
    <string name="ok">OK</string>
    <string name="disappointed_ok">Well, okay then.</string>
    <string name="permission_camera_rationale">This app needs access to the camera in order to detect people’s faces.</string>
    <string name="no_camera_permission">This app can’t run because it doesn’t have permission to use the camera. It will now exit.</string>
    <string name="low_storage_error">This app can’t download the face detector components it needs because this device has too little available storage.</string>
    <string name="start_roaming">Start free roam</string>
    <string name="get_small_distance_riders">(Get small distance riders)</string>
    <string name="schedule_trip">Schedule a trip</string>
    <string name="schedule_intercity_txt">(Schedule an intercity long drive)</string>
    <string name="quick_ride">Quick ride</string>
    <string name="schedule_your_ride">Schedule your ride</string>
    <string name="small_distance_quick_ride">(Small distance quick ride)</string>
    <string name="intercity_long_distance_rides">(Intercity long distance rides)</string>
    <string name="intercity_long_distance_ride">(Intercity long distance rides)</string>
    <string name="ride_completed">Ride has been completed</string>
    <string name="total_amount_paid">Total amount paid</string>
    <string name="payandbooknow">BOOK NOW</string>
    <string name="reached_string">Looks like you have reached/ndon\'t forget to review.</string>
    <string name="register_wepay_merchant">Do you want to register as driver to receive payments when you drive?</string>
    <string name="verify_wepay">You haven\'t verified your account on wepay..Please verify!!</string>
    <string name="onboard_welcome">Welcome on board!!</string>
    <string name="driver_picked">Driver has picked you up, enjoy ride!</string>
    <string name="your_otp">Share this OTP while driver pick you up</string>
    <string name="please_enter_username">Please enter username</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="not_a_member_yet">Not a member yet? Register here</string>
    <string name="some_error_occurred">Some error occurred!! Please try again!</string>
    <string name="check_internet">Please check your internet connection!!</string>
    <string name="send_a_report">Send a report</string>

</resources>
