<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_searchview">

    <TextView
        android:id="@+id/documents_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/your_driving_preferences"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/smoke_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/documents_title"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/you_smoke"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp">

            <CheckBox
                android:id="@+id/smoke_prefe_chck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ride_kids_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/smoke_lyt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rider_with_kids"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp">

            <CheckBox
                android:id="@+id/kids_travelling_chck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/carry_bags_pef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ride_kids_pref"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/rider_can_carry_bags"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp">

            <CheckBox
                android:id="@+id/carry_bags_pref_chck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/seats_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/carry_bags_pef"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center|left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/seats_on_board"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/minus_stepper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_minus_stepper_pop_xhdpi" />

            <TextView
                android:id="@+id/carry_bag_count_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="1"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/plus_stepper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus_stepper_pop_xhdpi" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_prefs"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/seats_pref"
        android:layout_marginTop="35dp"
        android:background="@color/colorGold"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>