<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_margin_top"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/avatar_avatar_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.carpool.tagalong.views.RegularTextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Android Studio"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <com.carpool.tagalong.views.RegularTextView
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Android Studio"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_below="@id/linear"
        android:background="#fafafa" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view1"
            android:orientation="vertical">

            <LinearLayout

                android:id="@+id/home_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/homeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_home_on_sidebar_xxhdpi"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/home"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/current_ride_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/current_ride_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_current_ride_off_sidebar_xxhdpi"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/currentupcoming"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/recent_ride_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/recent_rides_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_recent_ride_off_sidebar_xxhdpi"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/recent_rides"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/profile_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_profile_off_sidebar_xxhdpi"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/profile"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/emergency_rides_lyt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/emergency_rides"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_emergency_off_sidebar"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/emergency_rides"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <!--      <LinearLayout

                      android:id="@+id/filter"
                      android:padding="10dp"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_gravity="center"
                      android:orientation="horizontal">

                      <com.carpool.tagalong.views.RegularTextView
                          android:id="@+id/filter_txt"
                          android:layout_width  = "match_parent"
                          android:layout_height = "wrap_content"
                          android:padding="10dp"
                          android:textColor="@color/drawer_text_color"
                          android:drawableLeft="@drawable/ic_rating_profile_view_xhdpi"
                          android:drawablePadding="30dp"
                          android:textSize="16sp"
                          android:text="Filter"/>

                  </LinearLayout>
      -->
            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="8dp"
                android:layout_below="@id/linear"
                android:background="#fafafa" />

            <LinearLayout

                android:id="@+id/help_support_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/help_and_supportTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_help_support_off_sidebar_xxhdpi"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/help_and_support"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout

                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.carpool.tagalong.views.RegularTextView
                    android:id="@+id/about_us_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_about_us_off_sidebar_xxhdpi"
                    android:drawablePadding="30dp"
                    android:padding="10dp"
                    android:text="@string/about_us"
                    android:textColor="@color/drawer_text_color"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/log_out"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape_logout"
                android:text="Log out"
                android:textColor="@color/colorGold"
                android:textSize="20sp" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>